[package]
name = "urlencode"
version = "0.1.0"
authors = ["Vadim Polulyakh <bavadim@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A tool to perform percent-encoding (URL encoding)"
readme = "README.md"
keywords = ["url", "encoding"]
categories = ["command-line-utilities"]



[dependencies]
urlencoding = "1.1.1"